fix scrollbar issue

--- a/tosu_overlays/showcase/style.css
+++ b/tosu_overlays/showcase/style.css
@@ -11,6 +11,7 @@
     background-size: contain;
     font-family: Fraunces;
     color:white;
+    overflow: hidden;
     font-optical-sizing: auto;
 
 
